[gd_scene load_steps=6 format=2]

[ext_resource path="res://elements/ModuleDragger.tscn" type="PackedScene" id=1]
[ext_resource path="res://elements/JackIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://elements/gates/notgate.svg" type="Texture" id=3]
[ext_resource path="res://elements/gates/NOTGate.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 185, 138 )

[node name="NOTGate" type="Node2D"]
script = ExtResource( 4 )

[node name="sequencer" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ModuleDragger" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ModuleDragger"]
position = Vector2( 175, 140 )
shape = SubResource( 1 )

[node name="JackIn" parent="." instance=ExtResource( 2 )]
position = Vector2( 2, 245 )

[node name="JackOut" parent="." instance=ExtResource( 2 )]
position = Vector2( 348, 35 )
rotation = 3.14159
is_input = false

[node name="JackOut2" parent="." instance=ExtResource( 2 )]
position = Vector2( 348, 105 )
rotation = 3.14159
is_input = false

[node name="JackOut3" parent="." instance=ExtResource( 2 )]
position = Vector2( 348, 175 )
rotation = 3.14159
is_input = false

[node name="JackOut4" parent="." instance=ExtResource( 2 )]
position = Vector2( 348, 245 )
rotation = 3.14159
is_input = false
